--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+  <style>
+    body{ text-align:center} 
+    #divcss5{margin:0 auto;border:1px solid #000;width:300px;height:100px} 
+  </style>
 <head><title>小康00010</title></head>
-<body><script>alert("")</script></body>
+<body>
+  <div id="divcss5"><font size="9" face="Consolas" color="Blue">Blue OS 项目</font></div>
+</body>
 </html>
