--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </style>
 <head><title>小康00010</title></head>
 <body>
-  <div id="divcss5"><font face="Consolas" color="Blue">Blue OS 项目</font></div>
+  <div id="divcss5"><font size="5"face="Consolas" color="Blue">Blue OS 项目</font></div>
 </body>
 </html>
