--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <head><title>小康00010</title></head>
 <body>
   <body background="background.jpg">
-  <div id="divcss5"><font size="6"face="Consolas" color="Blue">---Blue OS项目---</font></div>
+  <div id="divcss5"><font size="6"face="Consolas" color="White">---Blue OS项目---</font></div>
 </body>
 </html>
