--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 <head><title>小康00010</title></head>
 <body>
   <body background="background.jpg">
-  <div id="divcss5"><font size="6"face="Consolas" color="White">---Blue OS项目---</font></div>
+  <div id="divcss5">
+    <font size="6"face="Consolas" color="White">---Blue OS项目---</font>
+    <table border="1">
+  <tr>
+    <th>更新版本</th>
+    <th>Blue OS 1.7.4 Build 2600</th>
+  </tr>
+  <tr>
+    <td>下载</td>
+    <td><font color="White" face="Consolas"><a href = "download/build2600.zip">打开下载</a></font></td>
+  </tr>
+</table>
+  </div>
+  
 </body>
 </html>
