--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <body background="background.jpg">
   <div id="divcss5">
-    <font size="6"face="Consolas" color="White">---Blue OS项目---</font>
+    <p><font size="6"face="Consolas" color="White">---Blue OS项目---</font></p>
     <table border="1">
   <tr>
     <th>更新版本</th>
