--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </tr>
   <tr>
     <td>下载</td>
-    <td><font color="White" face="Consolas"><a href = "downloads/build2600.zip">打开下载</a></font></td>
+    <td><a href = "downloads/build2600.zip"><font color="White" face="Consolas">打开下载</a></font></td>
   </tr>
 </table>
   </div>
