--- a/main.html
+++ b/main.html
@@ -1,6 +1,14 @@
 <html>
+<style>#divcss5{margin:0 auto;width:300px;height:100px}</style>
 <head>
+  <title>小康00010</title>
 </head>
 <body>
+  <font face="微软雅黑" color="White">
+  <body background="background.jpg">
+  <h1>欢迎来到小康00010的网页!</h1>
+  <p><h5><em>_________WebSite_________</em></h5></p>
+  <a href="logined.html">前往到Blue OS项目</a>
+  </font>
 </body>
 </html>
