--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
   <font face="微软雅黑" color="White">
   <body background="background.jpg">
   <h1>欢迎来到小康00010的网页!</h1>
-  <p><h5><em>_________WebSite_________</em></h5></p>
+  <hr align="center" width="50%" />
   <a href="logined.html">前往到Blue OS项目</a>
   </font>
 </body>
