--- a/main.html
+++ b/main.html
@@ -4,11 +4,13 @@
   <title>小康00010</title>
 </head>
 <body>
+  <center>
   <font face="微软雅黑" color="White">
   <body background="background.jpg">
   <h1>欢迎来到小康00010的网页!</h1>
   <hr align="center" width="50%" />
   <a href="logined.html">前往到Blue OS项目</a>
   </font>
+  </center>
 </body>
 </html>
