--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
   <center>
   <font face="微软雅黑" color="White">
   <body background="background.jpg">
-  <h1>欢迎来到小康00010的网页!</h1>
+  <h1><center>欢迎来到小康00010的网页!</center></h1>
   <hr align="center" width="50%" />
-  <a href="logined.html">前往到Blue OS项目</a>
+  <a href="logined.html"><center>前往到Blue OS项目</center></a>
   </font>
   </center>
 </body>
