--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
   <h1><center>欢迎来到小康00010的网页!</center></h1>
   <hr align="center" width="50%" />
   <a href="logined.html"><center>前往到Blue OS项目</center></a>
+  <a href="video.html"><center>查看我的最新视频</center></a>
   </font>
   </center>
 </body>
