--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="page-container">
             <h1>登录小康00010的网页</h1>
-            <form action="logined.html" 16:48 2019/6/8>
+            <form action="main.html" 16:48 2019/6/8>
                 <input type="text" name="username" class="username" placeholder="请输入您的用户名！">
                 <input type="password" name="password" class="password" placeholder="请输入您的用户密码！">
                 <input type="Captcha" class="Captcha" name="Captcha" placeholder="请输入验证码！">
