--- a/alive/index.html
+++ b/alive/index.html
@@ -3,7 +3,7 @@
     <title>小说 阅读</title>
   </head>
   <body>
-    <img src="alive.png"></img>
-    <center>幸存者</center>
+    <img src="alive.png"><center>幸存者</center></img>
+
   </body>
 </html>
