--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   <hr align="center" width="50%" />
   <a href="logined.html"><center>前往到Blue OS项目</center></a>
   <a href="video.html"><center>查看我的最新视频</center></a>
-  <a herf="index.html"><center>登出</center></a>
+  <a herf="index.html">登出</a>
   </font>
   </center>
 </body>
