--- a/books/newhome/index.html
+++ b/books/newhome/index.html
@@ -1,2 +1,10 @@
 <html>
+  <head>
+    <title>新家园 阅读</title>
+  </head>
+  <body>
+    <font size="9" face="Consolas" color="Blue">
+    <center>新家园</center>
+    </font>
+  </body>
 </html>
