--- a/book.html
+++ b/book.html
@@ -1,1 +1,19 @@
+<html>
+<style>#divcss5{margin:0 auto;width:300px;height:100px}</style>
+<head>
+  <title>小康00010 小说阅读</title>
+</head>
+<body>
+  <center>
+  <font face="微软雅黑" color="White">
+  <body background="background.jpg">
+  <h1><center>自制小说阅读</center></h1>
+  <hr align="center" width="50%" />
+  <a href="alive/index.html"><center>前往到幸存者项目</center></a>
+  <a href="book/newhome/index.html"><center>前往到幸存者项目</center></a>
+  <a herf="index.html">登出</a>
+  </font>
+  </center>
+</body>
+</html>
 
