--- a/book.html
+++ b/book.html
@@ -9,8 +9,8 @@
   <body background="background.jpg">
   <h1><center>自制小说阅读</center></h1>
   <hr align="center" width="50%" />
-  <a href="alive/index.html"><center>前往到幸存者项目</center></a>
-  <a href="book/newhome/index.html"><center>前往到幸存者项目</center></a>
+  <a href="alive/index.html"><center>前往到‘幸存者‘项目</center></a>
+  <a href="books/newhome/index.html"><center>前往到‘新家园‘项目</center></a>
   <a herf="index.html">登出</a>
   </font>
   </center>
