--- a/books/newhome/index.html
+++ b/books/newhome/index.html
@@ -5,6 +5,9 @@
   <body>
     <font size="9" face="Consolas" color="Blue">
     <center>新家园</center>
+    <hr align="center" width="50%" />
+    <center><a href="1.html">一.人类的新家园</a>   <a href="2.html">二.第一部分</a></center>
+    <center>滚去更新中...</center>
     </font>
   </body>
 </html>
